# EspNetworking

./: .gitmodules  CMakeLists.txt  README.md
client/: .gitignore  platformio.ini
client/src/: entity.io.c  entity_io.h  handle_tcp_request.h  main.c  motor.c  motor.h  motor_control.h  motor_controller.h  sleep.h  tcp_handler.c  tcp_handler.h  tcp_setup.c  tcp_setup.h  wifi_setup.c  wifi_setup.h
client/src/motion_control/: motor.c  motor.h  motor_task.h
client/src/networking/: net_status.h  tcp_connection.c  tcp_connection.h  tcp_io.c  tcp_io.h  wifi_connection.c  wifi_connection.h
common/: CMakeLists.txt
common/src/: entity.c  entity.h  esp_info.c  esp_info.h  net_status.h
server/: CMakeLists.txt
server/src/: main.cpp  tcp_client_observer.hpp  tcp_connection.hpp  tcp_observer.hpp  tcp_server.hpp
server_gui/src/: main.cpp
server_gui/src/gui/: esp_32.hpp  gui_connection_tab.hpp  gui_main.hpp  gui_window.hpp
server_gui/src/networking/: tcp_connection.hpp  tcp_logger.hpp  tcp_server.hpp
